# sentinel

./: .gitignore  README.md  STANDARD.md  pyproject.toml
.github/workflows/: ci.yml
sentinel/: __init__.py  __main__.py  checks.py  cli.py  config.py  contain.py
tests/: test_config.py  test_contain.py  test_sentinel.py
