[project]
name = "sentinel-health"
version = "0.1.0"
description = "A deterministic, dependency-free ecosystem health monitor — 🟢🟡🔴 across all your repos: uncommitted/unpushed work, staleness, missing tests, and READMEs that claim a PyPI install that doesn't exist."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "StellarRequiem" }]
keywords = ["git", "health", "monitor", "repos", "ci", "hygiene", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.scripts]
sentinel = "sentinel.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/StellarRequiem/sentinel"
Repository = "https://github.com/StellarRequiem/sentinel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
